--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,2 +1,16 @@
 <% include ./partials/header %>
+<div class ="ui main text container segment">
+    <div class="ui huge header"><%= blog.title %></div>
+    <div class="ui top attached">
+        <div class="item">
+               <img class="ui centered rounded image" src="<%= blog.image %>">
+               <div class="content">
+                    <span><%= blog.created.toDateString() %></span>
+               </div>
+               <div class="description">
+                   <p><%= blog.body.substring(0, 100) %>...</p>
+               </div>
+        </div>
+    </div>
+</div>
 <% include ./partials/footer %>
