--- a/views/show.ejs
+++ b/views/show.ejs
@@ -10,6 +10,9 @@
                <div class="description">
                    <p><%= blog.body.substring(0, 100) %>...</p>
                </div>
+               <form action="/blogs/<%= blog._id%>?_method=DELETE" method="POST">
+                   <button class="ui red basic button">Delete</button>
+               </form>
         </div>
     </div>
 </div>
